package edu.utn.frsf.isi.dan.user.dto;

import java.time.LocalDate;

import edu.utn.frsf.isi.dan.user.model.Huesped;
import edu.utn.frsf.isi.dan.user.model.TarjetaCredito;

public record HuespedRecord(
    String nombre,
    String email,
    String telefono,
    String dni,
    LocalDate fechaNacimiento,
    String numeroCC,
    String nombreTitular,
    String fechaVencimientoCC,
    String cvcCC,
    Boolean esPrincipalCC,
    Integer idBanco
) {

    public Huesped toHuesped() {
        Huesped huesped = new Huesped();
        huesped.setNombre(this.nombre);
        huesped.setEmail(this.email);
        huesped.setTelefono(this.telefono);
        huesped.setDni(this.dni);
        huesped.setFechaNacimiento(this.fechaNacimiento);
        return huesped;
    }

    public TarjetaCredito toTarjetaCredito() {
        return TarjetaCredito.builder()
            .numero(this.numeroCC)
            .fechaVencimiento(this.fechaVencimientoCC)
            .nombreTitular(this.nombreTitular)
            .cvc(this.cvcCC)
            .esPrincipal(this.esPrincipalCC)
            .build();
    }

}